--- a/.gitignore
+++ b/.gitignore
@@ -38,7 +38,7 @@ bower_components
 build/Release
 
 # Dependency directories
-node_modules/
+# BRIAN node_modules/
 jspm_packages/
 
 # TypeScript v1 declaration files
@@ -80,7 +80,7 @@ typings/
 
 # Nuxt.js build / generate output
 .nuxt
-dist
+# Brian dist
 
 # Gatsby files
 .cache/
